[tool.poetry]
name = "Perplex"
version = "1.0.0"
description = "Discord Rich Presence implementation for Plex."
authors = ["Ethan C <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
PlexAPI = "^4.13.0"
httpx = "^0.21.1"
pypresence = "^4.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
