[tool.poetry]
name = "Perplex"
version = "1.0.1"
description = "Discord Rich Presence implementation for Plex."
authors = ["Ethan C <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
PlexAPI = "^4.13.2"
httpx = "^0.23.3"
pypresence = "^4.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.16.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
